	  effect for anyone given that it has been unsupported for several years.
	+ Disable SSLv3 due to the POODLE vulnerability.
	+ Try to split long lines on spaces to avoid words being splitted. Adds
	  a new option: 'split_line_on_space' which defaults to on.
	+ TLS: Rename SSL to TLS throughout the code and command interfaces.

v0.8.17 2014-10-11  The Irssi team <staff@irssi.org>
	+ Document that SSL connections aren't properly handled during /UPGRADE. See Github PR #39.
	+ Synchronize scripts with scripts.irssi.org.
	+ Performance enhancement of the nicklist as well as the window_item_find function. See Github PR #24.
	+ Disallow unloading of static modules.
	+ Allow UTF-8 characters in /bind. See Github PR #18.
	+ Split overlong outgoing messages instead of silently truncating them.
	  Adds two new options: 'split_line_end' and 'split_line_start'.
	  'split_line_end' contains a string added to the end of line fragments.
	  'split_line_start' contains a string added to the beginning of line
	  fragments. See Github PR #29.
	+ Added special /ignore NO_ACT level to ignore only activity (see /help ignore).
	+ Support for 256 and true color terminals (see Github PR #48).
	+ Support for italics (see Github PR #58).
	+ Rewrote many help files.
	- Fixed various compiler warnings and use of deprecated functions.
	- Fixed Perl API usage and added PERL_NO_GET_CONTEXT to reduce code size.
	- Fixed format_get_text Perl API. See Github PR #23.
	- Fixed gui_printtext_after and term_refresh_*() visibility. See Github PR #22.
	- Fixed issue where UTF-8 characters was corrupted once for every 32k text. See Github PR #12.
	- Fixed redrawing issue with right-aligned statusbar.
	- Fixed use-after-free bug with cached settings values. See Github PR #147.

v0.8.16 2014-05-28  The Irssi team <staff@irssi.org>
	+ Add -noautosendcmd to /SERVER and /CONNECT. Passing this option will
	  force Irssi to not execute the content of the autosendcmd chatnet-setting
	  upon connect.